<resources>
    <!-- CREDENCIALES APLICATIVO-->
    <string name="app_name">CapacitApp</string>
    <string name="developers">Equipo Capacit</string>
    <string name="verion">Version 7.0</string>

    <!-- LOGIN-->
    <string name="login_title">Iniciar Sesión con cuenta CapacitApp</string>
    <string name="email_label">Email</string>
    <string name="password_label">Contraseña</string>
    <string name="login_button">Iniciar sesion</string>
    <string name="forgol_pasword">¿Olvidaste tu contraseña? Click Aqui</string>
    <string name="new_account">¿No tenes cuenta? Registrate</string>

    <!-- CONTACTO-->
    <string name="text_ayuda">¿Cómo podemos ayudarte?</string>
    <string name="text_contactarnos">Podés contactarnos escribiéndonos al siguiente e-mail:</string>
    <string name="text_emailcontacto">capacitcba@gmail.com</string>
    <string name="text_visitaWeb">¡Visita nuestra Web! CapacIT.com</string>
    <string name="text_titulo_contacto">Descripción texto ¡Visita nuestra Web! CapacIT.com</string>
    <string name="text_ayudarte">Descripción texto ¿Cómo podemos ayudarte?</string>
    <string name="text_contactarnos_email">Descripción texto podés contactarnos escribiéndonos al siguiente e-mail:</string>
    <string name="text_email_contacto">Descripción email de contacto capacitcba@gmail.com</string>
    <string name="text_desc_visita_web">Descripción texto ¡Visita nuestra Web! CapacIT.com</string>

    <!-- Main Toolbar-->
    <string name="titulo_capacit">Descripción texto Capacit</string>
    <string name="img_link_perfil">Descripción imagen de perfil link a sección perfil</string>
    <string name="text_cursos_disponibles">Descripción titulo seccion cursos disponibles</string>
    <string name="text_mis_cursos">Descripción titulo mis cursos</string>


   <!-- Listado de cursos-->

    <string name="desc_search">Descripción sección buscar cursos</string>

   <!-- CARD CURSO -->
    <string name="imagen_curso">Descripción imagen de curso</string>
    <string name="text_nombre_curso">Descripción texto nombre de curso</string>
    <string name="text_precio_curso">Descripción texto precio de curso</string>
    <string name="text_descripción_curso">Descripción texto descripción de curso</string>
    <string name="boton_comprar_curso">Descripción boton comprar curso</string>



    <!-- INICIO-->
    <string name="iniciar_secion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="contactanos">Contactarnos</string>
    <string name="ya_tienes_cuenta">¿Ya Tienes Cuenta?</string>
    <string name="quieres_crear_tu_cuenta">¿Quieres Crear tu Cuenta?</string>
    <string name="necesitas_ayuda">¿Necesitas Ayuda?</string>
    <string name="text_ya_tienes_cuenta">Descripción para el texto que pregunta si ya tienes cuenta</string>
    <string name="link_para_contacto">Descripcion para el enlace a seccion contacto</string>
    <string name="link_para_iniciar_sesion">Descripción para el enlace a seccion inicio de sesion</string>
    <string name="text_quieres_crear_cuenta">Descripción para el texto que pregunta si quieres crear una cuenta</string>
    <string name="link_para_registro">Descripción para el enlace a sección registro de usuarios</string>

    <!-- LOGIN-->
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_cuenta">¿No Tienes Cuenta?</string>
    <string name="toolbar_navegacion_atras">Barra de navegación con botón de retroceso</string>
    <string name="logo_de_la_aplicacion"> Logo de la aplicación</string>
    <string name="campo_para_ingresar_correo">Campo para ingresar correo electrónico</string>
    <string name="campo_para_ingresar_contrase_a">Campo para ingresar contraseña</string>
    <string name="boton_para_iniciar_sesion">Botón para iniciar sesión</string>
    <string name="texto_no_tienes_cuenta">Texto:¿No Tienes Cuenta?</string>
    <string name="enlace_para_registrarse">Enlace para registrarse</string>

    <!-- REGISTRO -->
    <string name="titulo_registro">Titulo de sección: Registro </string>
    <string name="campo_para_ingresar_nombre"> Campo para ingresar el nombre de usuario</string>
    <string name="campo_para_ingresar_apellido"> Campo para ingresar el nombre de usuario</string>
    <string name="boton_para_registro"> Boton para completar registro</string>
    <string name="usuario_apodo">Usuario/Apodo</string>
    <string name="nombre_s">Nombre/s</string>
    <string name="apellido_s">Apellido/s</string>
    <string name="pais">Pais</string>
    <string name="button">Registrarse</string>
    <string name="provincia">Provincia</string>

    <!-- Editar Perfil -->
    <string name="titulo_perfil">Titulo de sección: Perfil</string>
    <string name="imagen_para_perfil">Imagen seleccionada para perfil</string>
    <string name="boton_editar">Boton para acticar edición de datos de perfil</string>


    <!-- CONFIGURACIÓN-->
    <string name="text_nombre_config">Nombre</string>
    <string name="text_apellido_config">Apellido</string>
    <string name="text_email_config">E-mail</string>
    <string name="text_contraseña_config">Contraseña</string>
    <string name="btn_editar_config">Editar</string>

    <!-- ELIMINAR CUENTA-->
    <string name="text_eliminar_cuenta">Eliminar tu cuenta de CapacIT</string>
    <string name="text_detalle_eliminar">La eliminación de la cuenta es definitiva. Si eliminas tu cuenta de Capacit, tu perfil, tu foto, cursos y avances, se eliminarán de manera definitiva.</string>
    <string name="btn_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="btn_cancelar_eliminar">Cancelar</string>
    <string name="text_titulo_eliminar_cuenta">Descripción texto La eliminación de la cuenta es definitiva. Si eliminas tu cuenta de Capacit, tu perfil, tu foto, cursos y avances, se eliminarán de manera definitiva.</string>
    <string name="text_desc_eliminar_cuenta">Descripción texto Eliminar tu cuenta de Capacit</string>
    <string name="rb_confirmar_eliminar_cuenta">Descripción radio button seleccionar para eliminar cuenta y activar boton eliminar cuenta</string>
    <string name="boton_eliminar_cuenta">Descripción boton eliminar cuenta</string>
    <string name="boton_cancelar_eliminar_cuenta">Descripción boton cancelar eliminar cuenta</string>


    <!-- Items List -->
    <string name="name_recyclerview">ExpandableRecyclerView</string>
    <string name="check_this_item">Check this item?</string>
    <string name="drop_down_arrow">Drop down arrow</string>

    <!-- VERPERFIL-->
    <string name="btn_ireditarperfil">Modificar Datos de Perfil</string>
    <string name="text_estudiante">Descripcion texto estudiante</string>
s    <string name="text_nombre_usuario">Descripcion texto nombre de usuario</string>
    <string name="icono_configuracion">Descripcion icono configuración</string>
    <string name="link_para_configuracion">Descripción para el enlace a seccion configuración de perfil</string>
    <string name="icono_medio_de_pago">Descripcion icono medios de pago</string>
    <string name="text_medio_de_pago">Descripcion texto medio de pago</string>
    <string name="icono_historial">Descripcion icono historial</string>
    <string name="text_historial">Descripcion texto historial</string>
    <string name="icono_eliminar_cuenta">Descripcion icono eliminar cuenta</string>
    <string name="link_para_eliminar_cuenta">Descripción para el enlace a seccion configuración de perfil</string>
    <string name="boton_cerrar_sesion">Descripción para boton cerrar sesión</string>

    <!-- Editar Perfil -->
    <string name="btn_guardar_config">Guardar</string>

    <!-- Buscar cursos-->
    <string name="search_results">Resultados de búsqueda para: %1$s</string>

    <!-- RESULTADO DE BUSQUEDA-->
    <string name="text_resultado_busqueda">Descripción de texto resultado de busqueda</string>
    <string name="text_resultado_fallida">Descripción texto No se encontraron resultados</string>
    <string name="listado_resultado_busqueda">Descripción listado de resultados encontrados</string>

    <!-- Videoreproducto -->
    <string name="video_curso">Descripción reproducción de curso</string>

</resources>