<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/backward_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/toolbar_navegacion_atras"
        />

    <LinearLayout
        android:id="@+id/detallePerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/customToolbar"
        >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/customToolbar"
            android:contentDescription="@string/text_nombre_usuario"
            />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="118dp"
            android:layout_height="118dp"
            android:src="@drawable/imageuser"
            app:layout_constraintBottom_toBottomOf="@id/textViewName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imagen_para_perfil"
            />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Estudiante"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:textSize="20dp"
            android:contentDescription="@string/text_estudiante"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/detallePerfil">

        <ImageView
            android:id="@+id/imageViewConfig"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/imageviewconfig"
            android:contentDescription="@string/icono_configuracion"
            />

        <TextView
            android:id="@+id/textConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="13dp"
            android:text="Configuración"
            android:textAlignment="center"
            android:textSize="20sp"
            android:contentDescription="@string/link_para_configuracion"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutConfig">

        <ImageView
            android:id="@+id/imageViewPay"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/imageviewpay"
            android:contentDescription="@string/icono_medio_de_pago"
            />

        <TextView
            android:id="@+id/textPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="13dp"
            android:text="Medio de pago"
            android:textAlignment="center"
            android:textSize="20sp"
            android:contentDescription="@string/text_medio_de_pago"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutPay">

        <ImageView
            android:id="@+id/imageViewHistory"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/imageviewrecord"
            android:contentDescription="@string/icono_historial"
            />

        <TextView
            android:id="@+id/textHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="13dp"
            android:text="Historial"
            android:textAlignment="center"
            android:textSize="20sp"
            android:contentDescription="@string/text_historial"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDelCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHistory">

        <ImageView
            android:id="@+id/imageViewDelCount"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/imageviewdelcount"
            android:contentDescription="@string/icono_eliminar_cuenta"
            />

        <TextView
            android:id="@+id/textCloseCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Eliminar cuenta"
            android:textAlignment="center"
            android:textSize="20sp"
            android:contentDescription="@string/link_para_eliminar_cuenta"
            />

    </LinearLayout>

    <Button
        android:id="@+id/cerrarSesión"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Cerrar sesión"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDelCount"
        android:contentDescription="@string/boton_cerrar_sesion"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
