<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewCurso"
    android:layout_width="wrap_content"
    android:layout_height="330dp"
    android:background="#807D7D"
    android:padding="16dp"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imgcurso1"
            android:contentDescription="@string/imagen_curso"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNombreCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre Curso"
                android:textSize="20sp"
                android:contentDescription="@string/text_nombre_curso"/>

            <TextView
                android:id="@+id/tvPrecioCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="99 USS"
                android:textSize="24sp"
                android:textStyle="bold"
                android:contentDescription="@string/text_precio_curso"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_nombreconfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Descripción del curso"
                android:textSize="20sp"
                android:contentDescription="@string/text_descripción_curso"
                />

            <Button
                android:id="@+id/button_registrarse"
                android:layout_width="match_parent"
                android:layout_height="51sp"
                android:text="Comprar"
                android:contentDescription="@string/boton_comprar_curso"
                />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>