<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/backward_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="234dp"
        android:layout_height="201dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
        app:srcCompat="@drawable/ic_capacit" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:background="@drawable/custom_input"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_email"
        android:padding="12dp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:padding="12dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:drawableStart="@drawable/icono_btn_login"
        android:inputType="textPassword"
        android:background="@drawable/custom_input"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:text="@string/iniciar_secion"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/no_tienes_cuenta"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textV_registrarse_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/registrarse"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>